[tool.poetry]
name = "typedtsv"
version = "0.9.0"
description = "A simple format for typing TSVs with an implementation in Python 3"
authors = ["jimmybot <jimmybot@jimmybot.com>"]

readme = 'README.md'

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
pytest = ">=3.0"
toml = ">=0.9.4"
